web-studio-sass

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
     <header class="header container">
@@ -386,7 +386,6 @@
               </div>
             </label>
             <label for="" class="info-label">
-              Телефон
               <div class="input-wrapper">
                 <input type="tel" name="userphone" class="modal-input" />
                 <svg class="input-icon">
