--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
   </head>
   <body>
     <header class="header container">
+      <div class="mobile-header">
       <a href="" class="logo"> <span class="logo-span">Web</span>Studio</a>
-      <nav>
+      <svg class="nav-menu">
+          <use href="./img/symbol-defs.svg#icon-menu_24px"></use>
+      </svg>
+      </div>
+      <nav class="nav">
         <ul class="nav-list">
           <li>
           <a href="#" class="header-nav-link active">Студія</a>
@@ -36,7 +41,7 @@
           <a href="#" class="header-nav-link">Контакти</a>
           </li>
         </ul>
-      </nav>
+   
       <div class="phone">
         <ul class="phone-list">
           <li class="phone-item">
@@ -52,6 +57,7 @@
             <a href="#" class="header-link">+38 096 111 11 11</a>
           </li>
         </ul>
+           </nav>
       </div>
     </header>
     <main>
