--- a/portfolio.html
+++ b/portfolio.html
@@ -28,20 +28,25 @@
   </head>
   <body>
     <header class="header container">
+      <div class="mobile-header">
       <a href="" class="logo"> <span class="logo-span">Web</span>Studio</a>
-      <nav>
+      <svg class="nav-menu">
+          <use href="./img/symbol-defs.svg#icon-menu_24px"></use>
+      </svg>
+      </div>
+      <nav class="nav">
         <ul class="nav-list">
           <li>
-          <a href="./index.html" class="header-nav-link">Студія</a>
+          <a href="#" class="header-nav-link active">Студія</a>
           </li>
           <li>
-          <a href="#" class="header-nav-link active">Портфоліо</a>
+          <a href="./portfolio.html" class="header-nav-link ">Портфоліо</a>
           </li>
           <li>
           <a href="#" class="header-nav-link">Контакти</a>
           </li>
         </ul>
-      </nav>
+   
       <div class="phone">
         <ul class="phone-list">
           <li class="phone-item">
@@ -57,6 +62,7 @@
             <a href="#" class="header-link">+38 096 111 11 11</a>
           </li>
         </ul>
+           </nav>
       </div>
     </header>
     <main>
