--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         <ul class="phone-list">
           <li class="phone-item">
             <svg class="envelope-img">
-              <use href="./img/symbol-defs.svg#icon-envelope-1"></use>
+              <use href="./img/symbol-defs-3.svg#icon-envelope-1"></use>
             </svg>
             <a href="#" class="header-link">info@devstudio.com</a>
           </li>
           <li class="phone-item">
             <svg class="phone-img">
-              <use href="./img/symbol-defs.svg#icon-smartphone-1"></use>
+              <use href="./img/symbol-defs-3.svg#icon-smartphone-1"></use>
             </svg>
             <a href="#" class="header-link">+38 096 111 11 11</a>
           </li>
@@ -72,11 +72,9 @@
       <section class="our-advantages container">
         <ul class="our-advantages-list">
           <li class="our-advantages-item">
-            <img
-              class="our-advantages-img"
-              src="./img/symbol-defs.svg#icon-antenna-1-1"
-              alt="antenna"
-            />
+         <svg class="our-advantages-img">
+            <use class="our-advantages-img" href="./img/symbol-defs-3.svg#icon-antenna-1-1"></use>
+           </svg>
             <h3 class="our-advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="our-advantages-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
@@ -84,11 +82,9 @@
             </p>
           </li>
           <li class="our-advantages-item">
-            <img
-              class="our-advantages-img"
-              src="./img/symbol-defs.svg#icon-clock-1-1"
-              alt="clock"
-            />
+             <svg class="our-advantages-img">
+            <use class="our-advantages-img" href="./img/symbol-defs-3.svg#icon-clock-1-1"></use>
+           </svg>
             <h3 class="our-advantages-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="our-advantages-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
@@ -96,11 +92,9 @@
             </p>
           </li>
           <li class="our-advantages-item">
-            <img
-              class="our-advantages-img"
-              src="./img/symbol-defs.svg#icon-diagram-1-1"
-              alt="diagram"
-            />
+            <svg class="our-advantages-img">
+            <use class="our-advantages-img" href="./img/symbol-defs-3.svg#icon-diagram-1-1"></use>
+           </svg>
             <h3 class="our-advantages-title" class="our-advantages-title">
               ПЛАНУВАННЯ
             </h3>
@@ -109,11 +103,9 @@
             </p>
           </li>
           <li class="our-advantages-item">
-            <img
-              class="our-advantages-img"
-              src="./img/symbol-defs.svg#icon-astronaut-1-1"
-              alt="astronaut"
-            />
+           <svg class="our-advantages-img">
+            <use class="our-advantages-img" href="./img/symbol-defs-3.svg#icon-astronaut-1-1"></use>
+           </svg>
             <h3 class="our-advantages-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="our-advantages-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
@@ -147,7 +139,7 @@
                 <a href="" class="icon-link">
                   <svg class="icon">
                     <use
-                      href="./img/symbol-defs.svg#icon-instagram-2"
+                      href="./img/symbol-defs-3.svg#icon-instagram-2"
                       class="hi123"
                     ></use>
                   </svg>
@@ -156,21 +148,21 @@
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
                 </li>
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
                 </li>
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
                 </li>
@@ -186,7 +178,7 @@
                 <a href="" class="icon-link">
                   <svg class="icon">
                     <use
-                      href="./img/symbol-defs.svg#icon-instagram-2"
+                      href="./img/symbol-defs-3.svg#icon-instagram-2"
                       class="hi123"
                     ></use>
                   </svg>
@@ -195,21 +187,21 @@
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
                 </li>
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
                 </li>
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
                 </li>
@@ -225,7 +217,7 @@
                 <a href="" class="icon-link">
                   <svg class="icon">
                     <use
-                      href="./img/symbol-defs.svg#icon-instagram-2"
+                      href="./img/symbol-defs-3.svg#icon-instagram-2"
                       class="hi123"
                     ></use>
                   </svg>
@@ -234,21 +226,21 @@
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
                 </li>
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
                 </li>
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
                 </li>
@@ -264,7 +256,7 @@
                 <a href="" class="icon-link">
                   <svg class="icon">
                     <use
-                      href="./img/symbol-defs.svg#icon-instagram-2"
+                      href="./img/symbol-defs-3.svg#icon-instagram-2"
                       class="hi123"
                     ></use>
                   </svg>
@@ -301,32 +293,32 @@
         <ul class="clients-list">
           <li class="clients-item">
             <svg class="clients-image">
-              <use href="./img/symbol-defs.svg#icon-Logo-2-1"></use>
+              <use href="./img/symbol-defs-3.svg#icon-Logo-2-1"></use>
             </svg>
           </li>
           <li class="clients-item">
             <svg class="clients-image">
-              <use href="./img/symbol-defs.svg#icon-Logo-1"></use>
+              <use href="./img/symbol-defs-3.svg#icon-Logo-1"></use>
             </svg>
           </li>
           <li class="clients-item">
             <svg class="clients-image">
-              <use href="./img/symbol-defs.svg#icon-Logo-6"></use>
+              <use href="./img/symbol-defs-3.svg#icon-Logo-6"></use>
             </svg>
           </li>
           <li class="clients-item">
             <svg class="clients-image">
-              <use href="./img/symbol-defs.svg#icon-Logo-3-1"></use>
+              <use href="./img/symbol-defs-3.svg#icon-Logo-3-1"></use>
             </svg>
           </li>
           <li class="clients-item">
             <svg class="clients-image">
-              <use href="./img/symbol-defs.svg#icon-Logo-4-1"></use>
+              <use href="./img/symbol-defs-3.svg#icon-Logo-4-1"></use>
             </svg>
           </li>
           <li class="clients-item">
             <svg class="clients-image">
-              <use href="./img/symbol-defs.svg#icon-Logo-5-1"></use>
+              <use href="./img/symbol-defs-3.svg#icon-Logo-5-1"></use>
             </svg>
           </li>
         </ul>
@@ -344,16 +336,16 @@
         <div class="svg-container-footer">
           <h3 class="footer-title">приєднуйтесь</h3>
           <svg class="icon-footer">
-            <use href="./img/symbol-defs.svg#icon-instagram-2"></use>
+            <use href="./img/symbol-defs-3.svg#icon-instagram-2"></use>
           </svg>
           <svg class="icon-footer">
-            <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+            <use href="./img/symbol-defs-3.svg#icon-twitter-1"></use>
           </svg>
           <svg class="icon-footer">
-            <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+            <use href="./img/symbol-defs-3.svg#icon-facebook-1"></use>
           </svg>
           <svg class="icon-footer">
-            <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+            <use href="./img/symbol-defs-3.svg#icon-linkedin-1"></use>
           </svg>
         </div>
         <div class="subscribe-wrapper">
