--- a/portfolio.html
+++ b/portfolio.html
@@ -37,10 +37,10 @@
       <nav class="nav">
         <ul class="nav-list">
           <li>
-          <a href="#" class="header-nav-link active">Студія</a>
+          <a href="./index.html" class="header-nav-link ">Студія</a>
           </li>
           <li>
-          <a href="./portfolio.html" class="header-nav-link ">Портфоліо</a>
+          <a href="#" class="header-nav-link active">Портфоліо</a>
           </li>
           <li>
           <a href="#" class="header-nav-link">Контакти</a>
