--- a/portfolio.html
+++ b/portfolio.html
@@ -51,13 +51,13 @@
         <ul class="phone-list">
           <li class="phone-item">
             <svg class="envelope-img">
-              <use href="./img/symbol-defs.svg#icon-envelope-1"></use>
+              <use href="./img/symbol-defs-3.svg#icon-envelope-1"></use>
             </svg>
             <a href="#" class="header-link">info@devstudio.com</a>
           </li>
           <li class="phone-item">
             <svg class="phone-img">
-              <use href="./img/symbol-defs.svg#icon-smartphone-1"></use>
+              <use href="./img/symbol-defs-3.svg#icon-smartphone-1"></use>
             </svg>
             <a href="#" class="header-link">+38 096 111 11 11</a>
           </li>
@@ -225,16 +225,16 @@
         <div class="svg-container-footer">
           <h3 class="footer-title">приєднуйтесь</h3>
           <svg class="icon-footer">
-            <use href="./img/symbol-defs.svg#icon-instagram-2"></use>
+            <use href="./img/symbol-defs-3.svg#icon-instagram-2"></use>
           </svg>
           <svg class="icon-footer">
-            <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+            <use href="./img/symbol-defs-3.svg#icon-twitter-1"></use>
           </svg>
           <svg class="icon-footer">
-            <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+            <use href="./img/symbol-defs-3.svg#icon-facebook-1"></use>
           </svg>
           <svg class="icon-footer">
-            <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+            <use href="./img/symbol-defs-3.svg#icon-linkedin-1"></use>
           </svg>
         </div>
         <div class="subscribe-wrapper">
