--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <use href="./img/symbol-defs.svg#icon-menu_24px"></use>
       </svg>
       </div>
+       <a href="" class="logo"> <span class="logo-span">Web</span>Studio</a>
       <nav class="nav">
         <ul class="nav-list">
           <li>
