--- a/portfolio.html
+++ b/portfolio.html
@@ -27,13 +27,14 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header class="header container">
+     <header class="header container">
       <div class="mobile-header">
       <a href="" class="logo"> <span class="logo-span">Web</span>Studio</a>
       <svg class="nav-menu">
           <use href="./img/symbol-defs.svg#icon-menu_24px"></use>
       </svg>
       </div>
+       <a href="" class="logo"> <span class="logo-span">Web</span>Studio</a>
       <nav class="nav">
         <ul class="nav-list">
           <li>
