--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   </head>
   <body>
     <header class="header container">
-      <div class="mobile-header">
+      <!-- <div class="mobile-header">
+        <a href="" class="logo"> <span class="logo-span">Web</span>Studio</a>
+      </div> -->
       <a href="" class="logo"> <span class="logo-span">Web</span>Studio</a>
       <svg class="nav-menu">
           <use href="./img/symbol-defs.svg#icon-menu_24px"></use>
       </svg>
-      </div>
-       <a href="" class="logo"> <span class="logo-span">Web</span>Studio</a>
       <nav class="nav">
         <ul class="nav-list">
           <li>
@@ -42,7 +42,7 @@
           <a href="#" class="header-nav-link">Контакти</a>
           </li>
         </ul>
-   
+   </nav>
       <div class="phone">
         <ul class="phone-list">
           <li class="phone-item">
@@ -58,7 +58,6 @@
             <a href="#" class="header-link">+38 096 111 11 11</a>
           </li>
         </ul>
-           </nav>
       </div>
     </header>
     <main>
