--- a/index.html
+++ b/index.html
@@ -265,21 +265,21 @@
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
                 </li>
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
                 </li>
                 <li class="svg-container-item">
                 <a href="" class="icon-link">
                   <svg class="icon">
-                    <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                    <use href="./img/symbol-defs-3.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
                 </li>
