--- a/portfolio.html
+++ b/portfolio.html
@@ -27,14 +27,14 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-     <header class="header container">
-      <div class="mobile-header">
+    <header class="header container">
+      <!-- <div class="mobile-header">
+        <a href="" class="logo"> <span class="logo-span">Web</span>Studio</a>
+      </div> -->
       <a href="" class="logo"> <span class="logo-span">Web</span>Studio</a>
       <svg class="nav-menu">
           <use href="./img/symbol-defs.svg#icon-menu_24px"></use>
       </svg>
-      </div>
-       <a href="" class="logo"> <span class="logo-span">Web</span>Studio</a>
       <nav class="nav">
         <ul class="nav-list">
           <li>
@@ -47,7 +47,7 @@
           <a href="#" class="header-nav-link">Контакти</a>
           </li>
         </ul>
-   
+   </nav>
       <div class="phone">
         <ul class="phone-list">
           <li class="phone-item">
@@ -63,7 +63,6 @@
             <a href="#" class="header-link">+38 096 111 11 11</a>
           </li>
         </ul>
-           </nav>
       </div>
     </header>
     <main>
@@ -88,7 +87,7 @@
         <ul class="work-menu-gallery">
           <li class="work-menu-list-img-item">
             <div class="overlay-box">
-              <img src="./img/laptop.jpg" alt="" />
+              <img src="./img/laptop.jpg" alt="" class="gallery-img" />
               <div class="overlay">
                 <p class="overlay-text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -102,7 +101,7 @@
           </li>
           <li class="work-menu-list-img-item">
               <div class="overlay-box">
-            <img src="./img/basketball.jpg" alt="" />
+            <img src="./img/basketball.jpg" alt=""  class="gallery-img"/>
              <div class="overlay">
                 <p class="overlay-text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -116,7 +115,7 @@
           </li>
           <li class="work-menu-list-img-item">
              <div class="overlay-box">
-            <img src="./img/seafood.jpg" alt="" />
+            <img src="./img/seafood.jpg" alt=""  class="gallery-img"/>
               <div class="overlay">
                 <p class="overlay-text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -130,7 +129,7 @@
           </li>
           <li class="work-menu-list-img-item">
             <div class="overlay-box">
-            <img src="./img/headphones.jpg" alt="" />
+            <img src="./img/headphones.jpg" alt=""  class="gallery-img"/>
              <div class="overlay">
                 <p class="overlay-text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -144,7 +143,7 @@
           </li>
           <li class="work-menu-list-img-item">
             <div class="overlay-box">
-            <img src="./img/box.jpg" alt="" />
+            <img src="./img/box.jpg" alt=""  class="gallery-img"/>
               <div class="overlay">
                 <p class="overlay-text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -158,7 +157,7 @@
           </li>
           <li class="work-menu-list-img-item">
              <div class="overlay-box">
-            <img src="./img/monitor.jpg" alt="" />
+            <img src="./img/monitor.jpg" alt=""  class="gallery-img"/>
               <div class="overlay">
                 <p class="overlay-text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -172,7 +171,7 @@
           </li>
           <li class="work-menu-list-img-item">
              <div class="overlay-box">
-            <img src="./img/book.jpg" alt="" />
+            <img src="./img/book.jpg" alt=""  class="gallery-img"/>
              <div class="overlay">
                 <p class="overlay-text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -186,7 +185,7 @@
           </li>
           <li class="work-menu-list-img-item">
              <div class="overlay-box">
-            <img src="./img/lab.jpg" alt="" />
+            <img src="./img/lab.jpg" alt=""  class="gallery-img"/>
             <div class="overlay">
                 <p class="overlay-text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -200,7 +199,7 @@
           </li>
           <li class="work-menu-list-img-item">
              <div class="overlay-box">
-            <img src="./img/laptop-goiteens.jpg" alt="" />
+            <img src="./img/laptop-goiteens.jpg" alt=""  class="gallery-img"/>
              <div class="overlay">
                 <p class="overlay-text">
                   Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -242,12 +241,12 @@
         <h2 class="subscribe-titile">Підпишіться на розсилку</h2>
         <form action="" class="subscribe-form">
           <input type="email" placeholder="E-mail" class="subscribe-input" />
-          <button class="subscribe-btn">Підписатися
-            <svg class="send-img">
-              <use href="./img/symbol-defs2.svg#icon-icon-send"></use>
-            </svg>
-          </button>
         </form>
+        <button class="subscribe-btn">Підписатися
+          <svg class="send-img">
+            <use href="./img/symbol-defs2.svg#icon-icon-send"></use>
+          </svg>
+        </button>
         </div>
       </div>
     </footer>
